@startuml Entity Relationship Diagram
title Dynamic Report Generator - ERD

skinparam linetype ortho

entity "dynamic_saved_reports" as SavedReport {
  * id : unsignedBigInteger <<PK>>
  --
  * name : varchar
  description : text <<nullable>>
  * payload : json
  user_id : unsignedBigInteger <<FK>> <<nullable>> (Owner)
  created_at : timestamp
  updated_at : timestamp
}

entity "dynamic_report_logs" as ReportLog {
  * id : unsignedBigInteger <<PK>>
  --
  saved_report_id : unsignedBigInteger <<FK>> <<nullable>>
  user_id : unsignedBigInteger <<nullable>>
  * action : varchar
  details : json <<nullable>>
  created_at : timestamp
  updated_at : timestamp
}

entity "dynamic_report_user" as ReportUserPivot {
  * id : unsignedBigInteger <<PK>>
  --
  * saved_report_id : unsignedBigInteger <<FK>>
  * user_id : unsignedBigInteger
  created_at : timestamp
  updated_at : timestamp
  ..
  <<unique>> (saved_report_id, user_id)
}

entity "dynamic_virtual_attributes" as VirtualAttribute {
  * id : unsignedBigInteger <<PK>>
  --
  * name : varchar (e.g., 'total_order_value')
  * base_model : varchar (e.g., 'App\\Models\\Order')
  * return_type : varchar (e.g., 'integer')
  * sql_fragment : text
  dependencies : json <<nullable>>
  created_at : timestamp
  updated_at : timestamp
  ..
  <<unique>> (name, base_model)
}

entity "dynamic_restricted_models" as RestrictedModel {
  * id : unsignedBigInteger <<PK>>
  --
  * model_class : varchar <<unique>>
  restricted_by : unsignedBigInteger <<nullable>> (Admin User ID)
  created_at : timestamp
  updated_at : timestamp
}

entity "dynamic_attribute_restrictions" as AttributeRestriction {
  * id : unsignedBigInteger <<PK>>
  --
  * model_class : varchar
  * attribute : varchar
  * restriction_type : enum ('masked', 'blocked')
  subject_type : varchar <<nullable>> (Polymorphic)
  subject_id : unsignedBigInteger <<nullable>> (Polymorphic)
  created_by : unsignedBigInteger <<nullable>>
  created_at : timestamp
  updated_at : timestamp
  ..
  <<unique>> (model_class, attribute, subject_type, subject_id)
}

entity "users" as User {
  * id : unsignedBigInteger <<PK>>
  --
  (Host Application Table)
}

SavedReport ||--o{ ReportLog : "has many (on delete set null)"
SavedReport ||--o{ ReportUserPivot : "has many (on delete cascade)"
User ||--o{ ReportUserPivot : "assigned to"
User ||--o{ SavedReport : "owns"
User ||--o{ AttributeRestriction : "subject (polymorphic)"

@enduml
